fixed banner gap

--- a/src/app/shared/components/banner/banner.component.scss
+++ b/src/app/shared/components/banner/banner.component.scss
@@ -1,5 +1,5 @@
 .banner {
   width: 100vw;
-  height: 35vh;
+  height: inherit;
   object-fit: cover;
 }
